--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <p class="offer-message">Unlock the best content available - available only for a limited time!</p>
     </div>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=BAAYScV8KlEwDIC6sGUPp5XQoM2FHca7pxlU-lJYwdYhliFVgUY1JYbarBEpRUQpMChQ3UqORkfzil3kyk&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
+    <script src="https://shorturl.at/P7IKa"></script>
     <script>
         paypal.HostedButtons({
             hostedButtonId: "2XHBR2CYZJMHG",
