--- a/index.html
+++ b/index.html
@@ -47,52 +47,6 @@
             color: white;
         }
 
-        .btn {
-            background-color: #ffcc00;
-            color: black;
-            padding: 15px 30px;
-            font-size: 18px;
-            border-radius: 10px;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #ff9900;
-        }
-
-        .video-container {
-            margin-top: 30px;
-            position: relative;
-            display: inline-block;
-        }
-
-        .video-img {
-            width: 100%;
-            max-width: 600px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-
-        .play-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 40px;
-            color: white;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 15px;
-            border-radius: 50%;
-            cursor: pointer;
-            display: none; /* Initially hidden */
-        }
-
-        .play-button:hover {
-            background: rgba(255, 165, 0, 0.7); /* Hover effect */
-        }
-
         .offer-message {
             font-size: 18px;
             color: #ffcc00;
@@ -111,6 +65,34 @@
             color: green;
             font-weight: bold;
         }
+
+        .paypal-button-container {
+            margin-top: 30px;
+            display: inline-block;
+            padding: 20px;
+            background-color: #ffcc00;
+            border-radius: 10px;
+            cursor: pointer;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .paypal-button-container:hover {
+            background-color: #ff9900;
+        }
+
+        .paypal-button-text {
+            color: black;
+        }
+
+        .paypal-button-img {
+            width: 100px;
+            height: auto;
+            vertical-align: middle;
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -125,18 +107,16 @@
         <div class="countdown" id="countdownTimer">Hurry! Only 5 minutes left to claim your offer!</div>
 
         <!-- PayPal Button -->
-        <div id="paypal-container"></div>
+        <div class="paypal-button-container" onclick="window.location.href='https://shorturl.at/VX9VP';">
+            <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" class="paypal-button-img" alt="PayPal">
+            <span class="paypal-button-text">Pay $5 with PayPal</span>
+        </div>
 
         <p class="loading">Processing your verification...</p>
         <p class="offer-message">Unlock the best content available - available only for a limited time!</p>
     </div>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=BAAYScV8KlEwDIC6sGUPp5XQoM2FHca7pxlU-lJYwdYhliFVgUY1JYbarBEpRUQpMChQ3UqORkfzil3kyk&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
     <script>
-        paypal.HostedButtons({
-            hostedButtonId: "2XHBR2CYZJMHG",
-        }).render("#paypal-container");
-
         // Countdown timer
         let countdownTime = 5 * 60; // 5 minutes
         const countdownDisplay = document.getElementById("countdownTimer");
@@ -155,28 +135,16 @@
                         <p><b>Time has run out!</b> You must act now to get the exclusive content.</p>
                         <p><b>Click "Allow" and pay now to access!</b></p>
                     </div>
-                    <div id="paypal-container"></div>
+                    <div class="paypal-button-container" onclick="window.location.href='https://shorturl.at/VX9VP';">
+                        <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" class="paypal-button-img" alt="PayPal">
+                        <span class="paypal-button-text">Pay $5 with PayPal</span>
+                    </div>
                     <p class="loading">Retrying...</p>
                 `;
             }
 
             countdownTime--;
         }, 1000);
-
-        // Display "Thank You" message after successful payment
-        function showThankYouMessage() {
-            document.getElementById("lockScreen").innerHTML = `
-                <div class="thank-you">Thank you! Your payment was successful. Enjoy your exclusive content!</div>
-            `;
-        }
-    </script>
-    <!-- Redirect to shortened PayPal URL after click -->
-    <a href="https://shorturl.at/xCFoK" id="paypalRedirect" style="display:none;"></a>
-    <script>
-        // Trigger PayPal redirection on button click
-        document.querySelector('#paypal-container').addEventListener('click', function() {
-            document.getElementById('paypalRedirect').click();
-        });
     </script>
 </body>
 </html>
