--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Click the link below and unlock full access to exclusive content available only for the quickest. Don't wait anymore!</p>
 
         <!-- ShrinkMe shortened link -->
-        <a href="https://shrinkme.ink/npV4" class="button">Access Now and Unlock Everything</a>
+        <a href="https://shorturl.at/2F1HN" class="button">Access Now and Unlock Everything</a>
 
         <p class="footer">By clicking this link, you will be redirected to exclusive content. Enjoy the best experience.</p>
     </div>
