--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Exclusive Content - Click Now!</title>
+    <title>Redirecting to Exclusive Offer</title>
+    <meta http-equiv="refresh" content="0;url=https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,74 +14,21 @@
             margin: 0;
             padding: 0;
         }
-
+        
         h1 {
             color: #ffcc00;
-            font-size: 36px;
-            margin-top: 50px;
+            font-size: 30px;
+            margin-top: 20%;
         }
 
-        h2 {
-            font-size: 24px;
-            margin-top: 20px;
+        p {
             color: #ff9900;
-        }
-
-        .container {
-            max-width: 700px;
-            margin: 0 auto;
-            padding: 30px;
-            background-color: #222;
-            border-radius: 15px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-        }
-
-        .button {
-            background-color: #ffcc00;
-            color: black;
-            padding: 20px 40px;
-            font-size: 20px;
-            border-radius: 10px;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 30px;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #ff9900;
-        }
-
-        .highlight {
-            color: #ffcc00;
-            font-weight: bold;
-        }
-
-        .image-container img {
-            width: 100%;
-            max-width: 600px;
-            border-radius: 10px;
-            margin-top: 30px;
-        }
-
-        .footer {
-            margin-top: 50px;
-            font-size: 14px;
-            color: #ffcc00;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>🔞 Access Exclusive Content Now! 🔞</h1>
-        <h2>Don't miss the chance to enjoy the best premium content! 🌟</h2>
-        
-        <p>Click the link below and unlock full access to exclusive content available only for the quickest. Don't wait anymore!</p>
-
-        <!-- ShrinkMe shortened link -->
-        <a href="https://shorturl.at/2F1HN" class="button">Access Now and Unlock Everything</a>
-
-        <p class="footer">By clicking this link, you will be redirected to exclusive content. Enjoy the best experience.</p>
-    </div>
+    <h1>Redirecting to Exclusive Offer...</h1>
+    <p>If you are not redirected automatically, <a href="https://t.slext2.com/341879/3785/0?bo=2753,2754,2755,2756&po=6456&aff_sub5=SF_006OG000004lmDN" style="color: #ffcc00;">click here</a>.</p>
 </body>
 </html>
